// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<input
  className={undefined}
  maxLength={undefined}
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder={undefined}
  readOnly={false}
  style={Object {}}
  type="text"
  value=""
/>
`;

exports[`renders textarea 1`] = `
<textarea
  className={undefined}
  maxLength={undefined}
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder={undefined}
  readOnly={false}
  style={Object {}}
  value=""
/>
`;

exports[`renders textarea with props 1`] = `
<textarea
  className="CLASSNAME"
  maxLength={20}
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="PLACEHOLDER"
  readOnly={true}
  style={
    Object {
      "color": "#000",
    }
  }
  value="VALUE"
/>
`;

exports[`renders with props 1`] = `
<input
  className="CLASSNAME"
  maxLength={20}
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder="PLACEHOLDER"
  readOnly={true}
  style={
    Object {
      "color": "#000",
    }
  }
  type="text"
  value="VALUE"
/>
`;
